see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

24-Nov-2010 Ian MacLennan
 # [#23430] some jhtml behavior's load twice code
 # [#23425] Use the correct Icon for a new Article in Category List view
 # [#23117] Add missing fields to Category Edit

24-Nov-2010 Jean-Marie Simonet
 $ Changing module manager state filter to Published/Unpublished to be consequent.
 #$ [#23448] typo in en-GB.ini language file. Normalizing strings to use global.
 $^ Adding a string accidentally deleted, code cleaning.
 #$ [#23475] Redirect manager state - published or enabled. Thanks Bill.

23-Nov-2010 Christophe Demko
 # [#23432] The installer has some issues with schema updates
 $^ hiding the 'extension' field (no longer needed) while editing a category + set the 'rules' field label not translatable

23-Nov-2010 Jean-Marie Simonet
 $ Deleting unused strings. Reordering strings in some ini files.
 # [#23447] image truncated by row height. Thanks Andrea.
 $^ Deleting unused strings and css, completing setting the 'rules' field label not translatable
 $ Updating xx-XX plg_user.ini and ordering some strings.

22-Nov-2010 Christophe Demko
 #$ Fix a language loading file
 # [#23434] Installer outputs closing tag at the end of configuration.php (Ian MacLennan)

22-Nov-2010 Jean-Marie Simonet
 # [#23368] Missing styles for unpublished items in the list views. Thanks Elin and Bill.
 # [#23276] Fix left edge of header lines. Thanks Viet and Michael.

21-Nov-2010 Mark Dexter
# Sample data fixes (Elin Waring)

21-Nov-2010 Christophe Demko
 # $ Translating the label field instead of the name field in JLIB_FORM_VALIDATE_FIELD_INVALID error